--- a/package.json
+++ b/package.json
@@ -10,12 +10,38 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.0",
+    "@expo-google-fonts/lato": "^0.2.0",
+    "@expo-google-fonts/ubuntu": "^0.2.0",
+    "@react-native-picker/picker": "2.1.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.24.0",
     "expo": "~43.0.2",
+    "expo-app-loading": "~1.2.1",
+    "expo-camera": "~12.0.3",
+    "expo-constants": "~12.1.3",
+    "expo-font": "~10.0.3",
+    "expo-location": "~13.0.4",
+    "expo-media-library": "~13.0.3",
+    "expo-sensors": "~11.0.3",
     "expo-status-bar": "~1.1.0",
+    "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "11.13.0",
+    "react-select": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
