--- a/app.json
+++ b/app.json
@@ -28,10 +28,17 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": "Projeto aprendizagem sobre React"
+    "description": "Projeto aprendizagem sobre React",
+    "githubUrl": "https://github.com/irismar/camara"
   },
   "plugins": [
-    [
+    [  
+
+      "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        },
+
       "expo-media-library",
       {
         "photosPermission": "Allow $(PRODUCT_NAME) to access your photos.",
