--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
+  "ios": {
+    "bundleIdentifier": "com.yourcompany.yourappname",
+    "buildNumber": "1.0.0"
+  },
+  "android": {
+    "package": "com.yourcompany.yourappname",
+    "versionCode": 1
+  },
+  "web": {
+    "package": "com.yourcompany.yourappname",
+    "versionCode": 1
+  },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo-google-fonts/lato": "^0.2.0",
     "@expo-google-fonts/ubuntu": "^0.2.0",
+    "@hauvo/react-native-360-image-viewer": "^1.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -24,23 +38,34 @@
     "expo-camera": "~12.0.3",
     "expo-constants": "~12.1.3",
     "expo-font": "~10.0.3",
+    "expo-image-picker": "~11.0.3",
     "expo-location": "~13.0.4",
     "expo-media-library": "~13.0.3",
     "expo-sensors": "~11.0.3",
     "expo-status-bar": "~1.1.0",
+    "image360viewer": "^1.4.7",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-mapbox-autocomplete": "^0.2.3",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-flatlist-slider": "^1.0.6",
+    "react-native-floating-label-input": "^1.3.11",
+    "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-maps": "0.28.1",
     "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^4.11.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.13.0",
+    "react-native-youtube-iframe": "^2.2.1",
     "react-select": "^5.2.1"
   },
   "devDependencies": {
