--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-maps": "0.28.1",
+    "react-native-maps": "^0.28.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^4.11.1",
     "react-native-picker-select": "^8.0.4",
