--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-camera": "~12.0.3",
     "expo-constants": "~12.1.3",
     "expo-font": "~10.0.3",
+    "expo-image-manipulator": "~10.1.2",
     "expo-image-picker": "~11.0.3",
     "expo-location": "~13.0.4",
     "expo-media-library": "~13.0.3",
@@ -55,6 +56,7 @@
     "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-image-resizer": "*",
     "react-native-maps": "^0.28.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^4.11.1",
